# ase2025-starter-kit

./: .dockerignore  .gitignore  Dockerfile  README.md  baselines.py  download_models.py  pyproject.toml
