[tool.poetry]
name = "ase2025-starter-kit"
version = "0.1.0"
description = "Starter kit for the Co4 competition"
authors = ["Egor Bogomolov <egor.bogomolov@jetbrains.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsonlines = "^4.0.0"
argparse = "^1.4.0"
tqdm = "^4.67.1"
rank-bm25 = "^0.2.2"
openai = "^1.93.0"
langchain = "^0.3.26"
langchain-community = "^0.3.27"
tiktoken = "^0.9.0"
sentence-transformers = "^5.0.0"
langchain-openai = "^0.3.27"
langchain-huggingface = "^0.3.0"
faiss-cpu = "^1.11.0"
optimum = "^1.26.1"
mlx-lm = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
